[metadata]
name = example-pkg-YOUR-USERNAME-HERE
version = 0.0.1
author = Michael Kohlegger
author_email = michael@datenberge.org
description = Packe to create dummy datasets for analysis tasks
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/mckoh/blob_creator
project_urls =
    Bug Tracker = https://github.com/mckoh/blob_creator/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src